// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NodeApi createCustomNode() 1: Create custom node 1`] = `
{
  "_id": "a6063fb2f5dc42dd9772bedc93898bd8-1",
  "_rev": "142620490",
  "description": "Simple ALU that performs basic binary math operations. Expects an "x" and "y" value on the shared state, and will produce a new "z" value on the shared state as output.",
  "displayName": "ALU - TEST",
  "errorOutcome": true,
  "inputs": [
    "x",
    "y",
  ],
  "outcomes": [
    "Success",
  ],
  "outputs": [
    "z",
  ],
  "properties": {
    "operator": {
      "defaultValue": "ADD",
      "description": "The operation to perform.",
      "multivalued": false,
      "options": {
        "ADD": "+",
        "DIVIDE": "/",
        "MULTIPLY": "*",
        "SUBTRACT": "-",
      },
      "required": true,
      "title": "Operator",
      "type": "STRING",
    },
  },
  "script": "var SCRIPT_OUTCOMES = {
    SUCCESS: 'Success'
};

var OPERATORS = {
    ADD: "ADD",
    SUBTRACT: "SUBTRACT",
    MULTIPLY: "MULTIPLY",
    DIVIDE: "DIVIDE"
}

function main() {
    var a = Number(properties.a);
    var b = Number(properties.b);
    switch (properties.operator) {
        case OPERATORS.ADD:
            nodeState.putShared("z", a + b);
            break;
        case OPERATORS.SUBTRACT:
            nodeState.putShared("z", a - b);
            break;
        case OPERATORS.MULTIPLY:
            nodeState.putShared("z", a * b);
            break;
        case OPERATORS.DIVIDE:
            if (b == 0) throw new Error("Cannot divide by 0");
            nodeState.putShared("z", a / b);
            break;
        default: throw new Error("Unknown operator.");
    }
    action.goTo(SCRIPT_OUTCOMES.SUCCESS);
}

main();
",
  "serviceName": "a6063fb2f5dc42dd9772bedc93898bd8",
  "tags": [
    "math",
    "utilities",
  ],
  "version": 1,
}
`;

exports[`NodeApi createNode() 1: Create new node [5227de7a-02db-4f25-858e-c8d4f0e0b600 - SetStateNode] 1`] = `
{
  "_id": "5227de7a-02db-4f25-858e-c8d4f0e0b600",
  "_outcomes": [
    {
      "displayName": "Outcome",
      "id": "outcome",
    },
  ],
  "_rev": "1797046015",
  "_type": {
    "_id": "SetStateNode",
    "collection": true,
    "name": "Set State",
    "version": "1.0",
  },
  "attributes": {
    "errorMessage": "An error has occurred!",
  },
}
`;

exports[`NodeApi deleteCustomNode() 1: Delete existing custom node [a15e2efb3deb4d4ea338c74a6440b69f-1] 1`] = `
{
  "_id": "a15e2efb3deb4d4ea338c74a6440b69f-1",
}
`;

exports[`NodeApi deleteCustomNode() 2: Delete non-existing custom node [11111111111111111111111111111111-1] 1`] = `
{
  "code": 404,
  "message": "Node Type with resource ID 11111111111111111111111111111111-1 does not exist",
  "reason": "Not Found",
}
`;

exports[`NodeApi deleteNode() 1: Delete existing node [23bab9d4-1663-450f-8a4b-680f44f54fd6 - CreateObjectNode] 1`] = `
{
  "_id": "23bab9d4-1663-450f-8a4b-680f44f54fd6",
  "_outcomes": [
    {
      "displayName": "Created",
      "id": "CREATED",
    },
    {
      "displayName": "Failed",
      "id": "FAILURE",
    },
  ],
  "_rev": "1983463508",
  "_type": {
    "_id": "CreateObjectNode",
    "collection": true,
    "name": "Create Object",
    "version": "1.0",
  },
  "identityResource": "managed/user",
}
`;

exports[`NodeApi deleteNode() 2: Delete non-existing node [00000000-0000-0000-0000-000000000000 - PageNode] 1`] = `
{
  "code": 404,
  "message": "Not Found",
  "reason": "Not Found",
}
`;

exports[`NodeApi getCustomNode() 1: Get existing custom node [a605506774a848f7877b4d17a453bd39-1] 1`] = `
{
  "_id": "a605506774a848f7877b4d17a453bd39-1",
  "_rev": "-1791347633",
  "description": "Checks if the user has a current session.",
  "displayName": "Has Session - TEST",
  "errorOutcome": false,
  "inputs": [],
  "outcomes": [
    "True",
    "False",
  ],
  "outputs": [],
  "properties": {},
  "script": "var SCRIPT_OUTCOMES = {
    TRUE: 'True',
    FALSE: 'False'
}

function main() {
    action.goTo(typeof existingSession === "undefined" ? SCRIPT_OUTCOMES.FALSE : SCRIPT_OUTCOMES.TRUE);
}

main();
",
  "serviceName": "a605506774a848f7877b4d17a453bd39",
  "tags": [
    "utilities",
  ],
  "version": 1,
}
`;

exports[`NodeApi getCustomNode() 2: Get non-existing custom node [11111111111111111111111111111111-1] 1`] = `
{
  "code": 404,
  "message": "Node Type with resource ID 11111111111111111111111111111111-1 does not exist",
  "reason": "Not Found",
}
`;

exports[`NodeApi getCustomNodeUsage() 1: Get custom node usage [a605506774a848f7877b4d17a453bd39-1] 1`] = `{}`;

exports[`NodeApi getCustomNodes() 1: Get all custom nodes 1`] = `
[
  {
    "_id": "a15e2efb3deb4d4ea338c74a6440b69f-1",
    "displayName": "Vector ALU - TEST",
    "serviceName": "a15e2efb3deb4d4ea338c74a6440b69f",
    "tags": [
      "math",
      "vector",
      "utilities",
    ],
    "version": 1,
  },
  {
    "_id": "a605506774a848f7877b4d17a453bd39-1",
    "displayName": "Has Session - TEST",
    "serviceName": "a605506774a848f7877b4d17a453bd39",
    "tags": [
      "utilities",
    ],
    "version": 1,
  },
  {
    "_id": "aaaa3fb2f5dc42dd9772bedc93898bd8-1",
    "displayName": "Display State - TEST",
    "serviceName": "aaaa3fb2f5dc42dd9772bedc93898bd8",
    "tags": [
      "debug",
      "testing",
    ],
    "version": 1,
  },
]
`;

exports[`NodeApi getNode() 1: Get existing node [67693475-3a58-4e38-bcc6-037b3fe46a58 - ValidatedUsernameNode] 1`] = `
{
  "_id": "67693475-3a58-4e38-bcc6-037b3fe46a58",
  "_outcomes": [
    {
      "displayName": "Outcome",
      "id": "outcome",
    },
  ],
  "_rev": "1067668964",
  "_type": {
    "_id": "ValidatedUsernameNode",
    "collection": true,
    "name": "Platform Username",
    "version": "1.0",
  },
  "autocompleteValues": [],
  "usernameAttribute": "userName",
  "validateInput": false,
}
`;

exports[`NodeApi getNode() 2: Get non-existing node [00000000-0000-0000-0000-000000000000 - PageNode] 1`] = `
{
  "code": 404,
  "message": "Not Found",
  "reason": "Not Found",
}
`;

exports[`NodeApi getNodeTypes() 1: Get all node types 1`] = `
[
  {
    "_id": "CreateObjectNode",
    "name": "Create Object",
    "versions": [],
  },
  {
    "_id": "PageNode",
    "name": "Page Node",
    "versions": [],
  },
  {
    "_id": "ValidatedPasswordNode",
    "name": "Platform Password",
    "versions": [],
  },
  {
    "_id": "ValidatedUsernameNode",
    "name": "Platform Username",
    "versions": [],
  },
]
`;

exports[`NodeApi getNodes() 1: Get all nodes 1`] = `
[
  {
    "_id": "23bab9d4-1663-450f-8a4b-680f44f54fd6",
    "_rev": undefined,
    "_type": {
      "_id": "CreateObjectNode",
      "collection": true,
      "name": "Create Object",
      "version": "1.0",
    },
    "identityResource": "managed/user",
  },
  {
    "_id": "67693475-3a58-4e38-bcc6-037b3fe46a58",
    "_rev": undefined,
    "_type": {
      "_id": "ValidatedUsernameNode",
      "collection": true,
      "name": "Platform Username",
      "version": "1.0",
    },
    "autocompleteValues": [],
    "usernameAttribute": "userName",
    "validateInput": false,
  },
  {
    "_id": "b726262c-641e-4fa5-b276-98e129b44cd9",
    "_rev": undefined,
    "_type": {
      "_id": "PatchObjectNode",
      "collection": true,
      "name": "Patch Object",
      "version": "1.0",
    },
    "identityResource": "managed/user",
  },
]
`;

exports[`NodeApi getNodesByType() 1: Get all ValidatedUsernameNode nodes 1`] = `
[
  {
    "_id": "67693475-3a58-4e38-bcc6-037b3fe46a58",
    "_rev": "1067668964",
    "_type": {
      "_id": "ValidatedUsernameNode",
      "collection": true,
      "name": "Platform Username",
      "version": "1.0",
    },
    "autocompleteValues": [],
    "usernameAttribute": "userName",
    "validateInput": false,
  },
]
`;

exports[`NodeApi putCustomNode() 1: Update existing custom node [aaaa3fb2f5dc42dd9772bedc93898bd8-1] 1`] = `
{
  "_id": "aaaa3fb2f5dc42dd9772bedc93898bd8-1",
  "_rev": "-510334573",
  "description": "Debug node that displays the shared and transient state of the journey for debugging purposes.",
  "displayName": "Display State - TEST",
  "errorOutcome": false,
  "inputs": [],
  "outcomes": [
    "outcome",
  ],
  "outputs": [],
  "properties": {
    "displayFormat": {
      "defaultValue": "TABLE",
      "description": "The format in which to display the states.",
      "multivalued": false,
      "options": {
        "JSON": "Raw JSON",
        "TABLE": "HTML Table",
      },
      "required": true,
      "title": "Display Format",
      "type": "STRING",
    },
  },
  "script": "var SCRIPT_OUTCOMES = {
  OUTCOME: "outcome"
};

function main() {
    if (!callbacks.isEmpty()) {
        action.goTo(SCRIPT_OUTCOMES.OUTCOME);
        return;
    }
    var keySet = nodeState.keys(); // Java Set<String>
    var keys = Array.from(keySet); // Make it into JavaScript array
    debugState = {};
    for (var i in keys) {
        var k = new String(keys[i]);
        var item = nodeState.get(k);
        if (typeof item === "object") {
            debugState[k] = nodeState.getObject(k);
        } else {
            debugState[k] = nodeState.get(k);
        }
    }
    if (properties.displayFormat === "JSON") {
        callbacksBuilder.textOutputCallback(0, \`<pre style="text-align: left;">\${JSON.stringify(debugState, null, 2)}</pre>\`);
        return;
    }
    callbacksBuilder.textOutputCallback(0, \`<table><tr><td style="border: 1px solid black;">Key</td><td style="border: 1px solid black;">Value</td></tr>\${Array.from(Object.keys(debugState).map(k => \`<tr><td style="border: 1px solid black;"><pre style="text-align: left;">\${k}</pre></td><td style="border: 1px solid black;"><pre style="text-align: left;">\${debugState[k]}</pre></td></tr>\`))}</table>\`);
}

main();
",
  "serviceName": "aaaa3fb2f5dc42dd9772bedc93898bd8",
  "tags": [
    "debug",
    "testing",
  ],
  "version": 1,
}
`;

exports[`NodeApi putNode() 1: Create new node [18ffdd4b-41b7-41b3-8248-f4fdfd68423f - ValidatedPasswordNode] 1`] = `
{
  "_id": "18ffdd4b-41b7-41b3-8248-f4fdfd68423f",
  "_outcomes": [
    {
      "displayName": "Outcome",
      "id": "outcome",
    },
  ],
  "_rev": "-1272777657",
  "_type": {
    "_id": "ValidatedPasswordNode",
    "collection": true,
    "name": "Platform Password",
    "version": "1.0",
  },
  "passwordAttribute": "password",
  "validateInput": false,
}
`;

exports[`NodeApi putNode() 2: Update existing node [b726262c-641e-4fa5-b276-98e129b44cd9 - PatchObjectNode] 1`] = `
{
  "_id": "b726262c-641e-4fa5-b276-98e129b44cd9",
  "_outcomes": [
    {
      "displayName": "Patched",
      "id": "PATCHED",
    },
    {
      "displayName": "Failed",
      "id": "FAILURE",
    },
  ],
  "_rev": "-1625726187",
  "_type": {
    "_id": "PatchObjectNode",
    "collection": true,
    "name": "Patch Object",
    "version": "1.0",
  },
  "identityAttribute": "userName",
  "identityResource": "managed/user",
  "ignoredFields": [],
  "patchAsObject": false,
}
`;

exports[`NodeApi version-aware node api reads existing versioned container node [PageNode v2.0] 1`] = `
{
  "_id": "084c3d2d-7d47-4f2e-81d1-57961d496939",
  "_outcomes": [
    {
      "displayName": "outcome",
      "id": "2c8f0d12-c373-4a25-9a30-b3184888d163-outcome",
    },
  ],
  "_rev": "1257906332",
  "_type": {
    "_id": "PageNode",
    "collection": true,
    "name": "Page Node",
    "version": "2.0",
  },
  "nodes": [
    {
      "_id": "2c8f0d12-c373-4a25-9a30-b3184888d163",
      "displayName": "Debug",
      "nodeType": "designer-4b76e2122a0541498f380072cd115683",
      "nodeVersion": "1.0",
    },
  ],
  "pageDescription": {},
  "pageHeader": {
    "en": "HIGH",
  },
}
`;

exports[`NodeApi version-aware node api reads existing versioned node [ValidatedUsernameNode v2.0] 1`] = `
{
  "_id": "f74e82e2-72ab-4a1a-9188-655622794a37",
  "_outcomes": [
    {
      "displayName": "Outcome",
      "id": "outcome",
    },
  ],
  "_rev": "-1460424714",
  "_type": {
    "_id": "ValidatedUsernameNode",
    "collection": true,
    "name": "Platform Username",
    "version": "2.0",
  },
  "autocompleteValues": [],
  "prepopulate": false,
  "usernameAttribute": "userName",
  "validateInput": false,
}
`;

exports[`NodeApi version-aware node api reads versioned container nodes by type [PageNode v2.0] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "084c3d2d-7d47-4f2e-81d1-57961d496939",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "2c8f0d12-c373-4a25-9a30-b3184888d163-outcome",
        },
      ],
      "_rev": "1257906332",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "2c8f0d12-c373-4a25-9a30-b3184888d163",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "HIGH",
      },
    },
    {
      "_id": "37f190ea-fa18-4d44-941b-4e5ac325f394",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "8835fe59-3988-4121-8b15-ad16a7049d7a-outcome",
        },
      ],
      "_rev": "-1221766302",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "8835fe59-3988-4121-8b15-ad16a7049d7a",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "MEDIUM",
      },
    },
    {
      "_id": "8120e613-dee8-42b4-9668-71b8a25c1c92",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "52ab689c-491b-4117-b729-ff590b5d1f61-outcome",
        },
      ],
      "_rev": "2084966012",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "52ab689c-491b-4117-b729-ff590b5d1f61",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "P1P Failure!",
      },
    },
    {
      "_id": "4fdf4255-0236-4527-ae6d-d10d2c0ee8d5",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "6a428d9f-a221-44f6-a5c6-c6981f90f9fc-outcome",
        },
      ],
      "_rev": "-506663009",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "f74e82e2-72ab-4a1a-9188-655622794a37",
          "displayName": "Username",
          "nodeType": "ValidatedUsernameNode",
          "nodeVersion": "2.0",
        },
        {
          "_id": "6a428d9f-a221-44f6-a5c6-c6981f90f9fc",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    {
      "_id": "00a4835b-6e99-4938-9bb8-50d5569a68d4",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "843dd22b-a890-461b-9a16-33d8bd871396-outcome",
        },
      ],
      "_rev": "-348325213",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "843dd22b-a890-461b-9a16-33d8bd871396",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "LOW",
      },
    },
    {
      "_id": "f1cb199e-9e9a-4761-bacf-bc717ca6c540",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "de8fa10c-f4cc-44b7-b675-cdc75dcc600f-outcome",
        },
      ],
      "_rev": "161892345",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "de8fa10c-f4cc-44b7-b675-cdc75dcc600f",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "Exceeds Score Threshold",
      },
    },
    {
      "_id": "a0059e3b-de04-4f0f-a5ed-49525d1da576",
      "_outcomes": [
        {
          "displayName": "outcome",
          "id": "c1804982-10dc-4668-bd53-909107cc4039-outcome",
        },
      ],
      "_rev": "-1213941782",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
        "version": "2.0",
      },
      "nodes": [
        {
          "_id": "c1804982-10dc-4668-bd53-909107cc4039",
          "displayName": "Debug",
          "nodeType": "designer-4b76e2122a0541498f380072cd115683",
          "nodeVersion": "1.0",
        },
      ],
      "pageDescription": {},
      "pageHeader": {
        "en": "P1P Client Error!",
      },
    },
  ],
  "resultCount": 7,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`NodeApi version-aware node api reads versioned node schema [ValidatedUsernameNode v2.0] 1`] = `
{
  "properties": {
    "autocompleteValues": {
      "default": [],
      "description": "If set, the input field will provide autocomplete suggestions based on these values, as per HTML 5 specifications.",
      "exampleValue": "",
      "items": {
        "type": "string",
      },
      "propertyOrder": 400,
      "title": "Autocomplete Values",
      "type": "array",
    },
    "prepopulate": {
      "default": false,
      "description": "If true, the input field is prepopulated with the 'username' value if present in the node state.",
      "exampleValue": "",
      "propertyOrder": 300,
      "title": "Prepopulate Username",
      "type": "boolean",
    },
    "usernameAttribute": {
      "default": "userName",
      "description": "The name of the attribute in the IDM object that stores the username.",
      "exampleValue": "",
      "propertyOrder": 200,
      "title": "Username Attribute",
      "type": "string",
    },
    "validateInput": {
      "default": false,
      "description": "Check IDM policy against this username and return any policy failures as errors.",
      "exampleValue": "",
      "propertyOrder": 100,
      "title": "Validate username",
      "type": "boolean",
    },
  },
  "required": [
    "validateInput",
    "usernameAttribute",
    "prepopulate",
    "autocompleteValues",
  ],
  "type": "object",
}
`;

exports[`NodeApi version-aware node api reads versioned node type [ValidatedUsernameNode v2.0] 1`] = `
{
  "_id": "2.0",
  "collection": true,
  "help": "Prompts the user to enter their username and stores the input in a configurable state attribute for platform nodes to consume.",
  "metadata": {
    "tags": [
      "identity management",
      "basic authentication",
      "basic authn",
    ],
  },
  "name": "Platform Username",
  "tags": [
    "identity management",
    "basic authentication",
    "basic authn",
  ],
}
`;

exports[`NodeApi version-aware node api reads versioned nodes by type [ValidatedUsernameNode v2.0] 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "f74e82e2-72ab-4a1a-9188-655622794a37",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "-1460424714",
      "_type": {
        "_id": "ValidatedUsernameNode",
        "collection": true,
        "name": "Platform Username",
        "version": "2.0",
      },
      "autocompleteValues": [],
      "prepopulate": false,
      "usernameAttribute": "userName",
      "validateInput": false,
    },
  ],
  "resultCount": 1,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;
